# nl3pddl

./: .env_template  .gitignore  .gitmodules  513.py  README.md  benchmark.md  crash.pddl  crashdomain.pddl  crashplan.txt  crashprob.pddl  crashproblem.pddl  driver.py  experiment_config.yaml  gen_problems.py  how_to_run_multithreaded.md  issues.md  lmstats.ipynb  output.sas  pipe_new.ipynb  plot.py  process.py  pyproject.toml  requirements.txt  res.csv  results.csv  results1.csv  results2.csv  results3.csv  results4.csv  test.py  test.txt  test_gen_problems.py  todo.md  up.sql  val.sh  validate_generated_problem.py
data/: Readme.md  config.json  database.db  reprompt_template.txt  start_prompt_template.txt  val_repromt_template.txt
landmarks_output/: blocks_problem-1.json  blocks_problem-10.json  blocks_problem-2.json  blocks_problem-3.json  blocks_problem-4.json  blocks_problem-5.json  blocks_problem-6.json  blocks_problem-7.json  blocks_problem-8.json  blocks_problem-9.json  bookseller_problem-1.json  bookseller_problem-10.json  bookseller_problem-2.json  bookseller_problem-3.json  bookseller_problem-4.json  bookseller_problem-5.json  bookseller_problem-6.json  bookseller_problem-7.json  bookseller_problem-8.json  bookseller_problem-9.json  checkers-jumping_problem-1.json  checkers-jumping_problem-10.json  checkers-jumping_problem-2.json  checkers-jumping_problem-3.json  checkers-jumping_problem-4.json  checkers-jumping_problem-5.json  checkers-jumping_problem-6.json  checkers-jumping_problem-7.json  checkers-jumping_problem-8.json  checkers-jumping_problem-9.json  (+20 more)
(+983 files in other folders)
