[project]
name = "nl2pddl3"
version = "0.1.0"
description = ""
authors = [
    {name = "James Oswald",email = "jamesoswald111@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pddl (>=0.4.3,<0.5.0)",
    "openai (>=1.76.0,<2.0.0)",
    "langchain[openai] (>=0.3.25,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
