[project]
name = "nl2pddl3"
version = "0.1.0"
description = ""
authors = [
    {name = "James Oswald",email = "jamesoswald111@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pddl (>=0.4.3,<0.5.0)",
    "openai (>=1.76.0,<2.0.0)",
    "langchain[openai] (>=0.3.25,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "langchain-deepseek (>=0.1.3,<0.2.0)",
    "langgraph (>=0.4.5,<0.5.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-core (>=0.3.60,<0.4.0)",
    "pygraphviz (>=1.14,<2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "forbiditerative (>=1.1.3,<2.0.0)",
    "kstar-planner (>=1.4.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
